# py-agterm

./: Dockerfile  pyproject.toml
src/py_agterm/: AGTerm.py  __init__.py  mcp_server.py
