[project]
name = "py-agterm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ashim Mahara", email = "mr.maharaofficial@outlook.com" }
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.25.0",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
